example/lib/src/l10n/errors/app_tl.arb
{
  "@@locale": "tl",
  "error": "An error occurred",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "An unexpected error occurred",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Matagumpay naipadala ang ulat ng bug.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}